# answering_machine

./: .gitignore  Dockerfile  config.py  connections.py  docker-compose.yaml  init.sql  main.py  petya.json  pyproject.toml  way.py
actions/: action_functions.py  dadata.py  management.py
config/: __init__.py  logging_config.yaml
core/: conditions.py  router.py
functions/: action_functions.py  dadata.py  parametrs.py  prompt_functions.py  text_prompt.py
prompts/: connection_parameters.py  extract_words.py  parametrs.py  prompt_functions.py  text_prompt.py  vectors.py
services/: get_to_1c.py  llm.py
