[project]
name = "ai-chat-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistralai>=1.5.1",
    "mysql-connector-python>=9.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "openai>=1.60.2",
    "httpx>=0.27.0"
]
